# wholistic_registration

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUDIT.md  CLAUDE.md  README.md  REMEDIATION_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hardcoded_paths_survey.md
src/: demo_toy.py
src/registration/: motion_estimation.py
src/registration/wbi_0419/: __init__.py  calFlow3d_Wei_v1.py  calculate.py  imresize.py  interp.py  visulization.py
src/wbolistic_registration.egg-info/: PKG-INFO  SOURCES.txt
src/wholistic_registration/: __init__.py  demo_338.py  pipeline.md  pipeline.py  pipeline_vmsr.py  test_wbi.py
src/wholistic_registration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wholistic_registration/configs/: condif_default.toml  config.toml  config_0120.toml  config_default.toml  config_f2013_0225.toml  config_f338.toml  config_f338_0326.toml  config_f338_0410.toml  config_f338_0412.toml
src/wholistic_registration/core/: main_function.py
src/wholistic_registration/demos/: demo2d.py  demo_338.py  demo_f338.ipynb  test_f2013.py  test_f2013_reference.py
src/wholistic_registration/gui/: __init__.py  app.py
src/wholistic_registration/macros/: LoadTiffList.ijm  Show4ChTiff.ijm  merge_6ch_f260517.ijm
src/wholistic_registration/pipeline/: HighResolution.md  Motion_Extraction_and_Recognization.md  pipeline.md
src/wholistic_registration/tests/: f260517_helpers.py  run_F260517_0625.py  run_F260517_cluster.sh  test.py  test_F260517.ipynb  test_F260517_v2.ipynb  test_F260517_v2.py  test_GPU.py  test_HR.ipynb  test_HR_simulation.py  test_model.ipynb  zarr_to_tiffseries.py
src/wholistic_registration/utils/: IO.py  ImmuneCell.py  __init__.py  calFlow3d_Wei_v1.py  calFlowCrossResolution.py  calculate.py  converters.py  generate_demo_data.py  imresize.py  interp.py  mask.py  motion_correlation_pattern.py  motion_stage_cache.py  preprocess.py  reference.py  registration.py  reliableAnalysis.py  simulation.py  visualization.py
src/wholistic_registration/v2/core/: registration.py
tests/: conftest.py
tests/unit/: test_generate_demo_data.py  test_preprocess.py  test_smoke.py
