[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wholistic_registration"
version = "0.1.0"
description = "Whole Brain Image Registration with GPU acceleration support"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tifffile>=2023.7",
    "nd2>=0.8",
    "toml>=0.10",
    "zarr>=2.16,<3",
    "dask[array]>=2023.10",
    "h5py>=3.9",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
gpu = ["cupy"]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
